k8s/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-app-svc
  namespace: grass-diary-backend-dev
spec:
  selector:
    app: spring-boot-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
