k8s/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-ingress
  namespace: grass-diary-backend-dev
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - dev.chzzk-diary-server.shop
    secretName: dev-tls-secret
  rules:
  - host: dev.chzzk-diary-server.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: spring-boot-app-svc
            port: 
              number: 80
